# Vulkan-Spectral-Ocean

./: CMakeLists.txt  LICENSE  README.md
shaders/: boat.frag  boat.vert  build_tiles.comp  cube_capture.vert  equirect_to_cubemap.frag  fft_combine.comp  foam.comp  fullscreen.vert  ifft_cols.comp  ifft_rows.comp  skybox.frag  skybox.vert  skybox_scene.frag  spectrum.comp  spray.frag  spray.vert  spray_spawn.comp  spray_update.comp  taa.frag  tonemap.frag  water.frag  water.vert
src/: hdr_loader.cpp  hdr_loader.h  main.cpp  obj_loader.cpp  obj_loader.h  vk_context.cpp  vk_context.h  vk_helpers.cpp  vk_helpers.h
